Added functionality to redeem discount coupons